--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
       rel="stylesheet"
@@ -23,8 +27,9 @@
   </head>
   <body>
     <div class="d-flex bg-warning">
-      <h1>hello world</h1>
+      <h1>Hello world</h1>
       <p>Hi there</p>
+      <i class="fab fa-instagram" aria-hidden="true"></i>
     </div>
   </body>
 </html>
