--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram" aria-hidden="true"></i>
+    <div class="hero">
+      <p>👋 Hello, I'm</p>
+      <h1>Buhle Masondo</h1>
+      <h2>Front-end developer in South Africa</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
