integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -28,11 +28,48 @@
   </head>
   <body>
     <div class="hero">
-      <p>👋 Hello, I'm</p>
+      <p>👋 Hello, I am</p>
       <h1>Buhle Masondo</h1>
-      <h2>Front-end developer in South Africa</h2>
+      <h2 class="mb-5">Front-end developer based in South Africa</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/scented.PNG" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Scented Project</h2>
+            <p class="mb-5 text-muted">
+              My Scented project was about 4 different types of diffusing
+              essential oils and the benefits of the essential oils. The project
+              was built using HTML and CSS.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              This is a weather app I've built using Html , Css and JS. you can
+              find the weather of different cities for a week using the search
+              button.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather project.PNG" class="img-fluid" alt="" />
+        </div>
       </div>
     </div>
   </body>
