created created contact.html, about.html, work.html,contact.html and added navbar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,59 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/" title="Homepage">BM</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                tilte="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="./about.html"
+                title="About Buhle Masondo"
+                >About me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/work.html"
+                title="work of Buhle Masondo"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="./contact.html"
+                title="Contact Buhle Masondo"
+                >Contact me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Buhle Masondo</h1>
@@ -71,6 +124,26 @@
           <img src="images/weather project.PNG" class="img-fluid" alt="" />
         </div>
       </div>
+      <footer>
+        <div class="work-box text-center mb-4 p-3">
+          <h4>Let's work together!</h4>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a class="email-link" href="mailto:buhlemm22@gmail.com"
+            >buhlemm22@gmail.com</a
+          >
+        </div>
+        <div>
+          <p class="text-muted text-center mt-5 github">
+            This project was coded by Buhle and is open-sourced on
+            <a
+              href="https://github.com/Buhle-Masondo/Portfolio-project"
+              class="github-link"
+              >GitHub</a
+            >
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
