added the weather project netlify link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               find the weather of different cities for a week using the search
               button.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="https://weather-forecast-smart-app.netlify.app/" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
