added the scented project link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
               essential oils and the benefits of the essential oils. The project
               was built using HTML and CSS.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a
+              href="file:///C:/Users/Sinothile/OneDrive/Desktop/SheCodesBasic-Buhle/Scented.html"
+              class="btn btn-branding-outline"
+            >
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -117,7 +122,12 @@
               find the weather of different cities for a week using the search
               button.
             </p>
-            <a href="https://weather-forecast-smart-app.netlify.app/" class="btn btn-branding-outline"> Learn more </a>
+            <a
+              href="https://weather-forecast-smart-app.netlify.app/"
+              class="btn btn-branding-outline"
+            >
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
