created projects.html and edited style\portfolio.css

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/work.html"
+                href="./projects.html"
                 title="work of Buhle Masondo"
-                >Work</a
+                >Projects</a
               >
             </li>
             <li class="nav-item">
