--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
       rel="stylesheet"
@@ -85,7 +86,7 @@
       <h1>Buhle Masondo</h1>
       <h2 class="mb-5">Front-end developer based in South Africa</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="./contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
