edited the footer

--- a/index.html
+++ b/index.html
@@ -136,23 +136,27 @@
         </div>
       </div>
       <footer>
-        <div class="work-box text-center mb-4 p-3">
-          <h4>Let's work together!</h4>
+        <div class="work-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inqury</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href class="btn btn-branding mt-3">Contact me</a>
+          </div>
         </div>
-        <div class="d-flex justify-content-center mb-4">
+        <div class="d-flex justify-content-center mb-5">
           <a class="email-link" href="mailto:buhlemm22@gmail.com"
             >buhlemm22@gmail.com</a
           >
         </div>
-        <div>
-          <p class="text-muted text-center mt-5 github">
-            This project was coded by Buhle and is open-sourced on
-            <a
-              href="https://github.com/Buhle-Masondo/Portfolio-project"
-              class="github-link"
-              >GitHub</a
-            >
-          </p>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.github.com/Buhle-Masondo" target="_blank">
+            <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.instragram.com/bee_masondo" target="_blank">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
         </div>
       </footer>
     </div>
