--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Buhle is a front-end engineer based in South Africa."
+    />
     <title>Front-end developer - Buhle Masondo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -28,65 +32,38 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="/" title="Homepage">BM</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                tilte="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="./about.html"
-                title="About Buhle Masondo"
-                >About me</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="./projects.html"
-                title="work of Buhle Masondo"
-                >Projects</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="./contact.html"
-                title="Contact Buhle Masondo"
-                >Contact me</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Shecodes logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Shecodes small logo"
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="./index.html" title="Home page">Home</a>
+          </li>
+          <li><a href="./about.html" title="About Buhle">About</a></li>
+          <li><a href="./projects.html" title="Buhle's work">Work</a></li>
+          <li><a href="./contact.html" title="Contact Buhle">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Buhle Masondo</h1>
       <h2 class="mb-5">Front-end developer based in South Africa</h2>
       <div>
-        <a href="./contact.html" class="btn btn-branding">Contact me</a>
+        <a href="./contact.html" class="btn btn-branding" title="contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -95,7 +72,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/scented.PNG" class="img-fluid" alt="" />
+          <img
+            src="images/scented.PNG"
+            class="img-fluid"
+            alt="scented project preview"
+          />
         </div>
         <div class="col">
           <div class="project-desciption">
@@ -132,32 +113,53 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather project.PNG" class="img-fluid" alt="" />
+          <img
+            src="images/weather project.PNG"
+            class="img-fluid"
+            alt="weather project preview"
+          />
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="work-box justify-content-between mb-5 d-none d-md-flex">
           <div>
             <h4>Work Inqury</h4>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href class="btn btn-branding mt-3">Contact me</a>
+            <a href class="btn btn-branding mt-3" title="contact Buhle"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a class="email-link" href="mailto:buhlemm22@gmail.com"
+          <a
+            class="email-link"
+            href="mailto:buhlemm22@gmail.com"
+            title="Email Buhle"
             >buhlemm22@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/Buhle-Masondo" target="_blank">
+          <a
+            href="https://www.github.com/Buhle-Masondo"
+            target="_blank"
+            title="Github profile"
+          >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
-          <a href="https://www.instragram.com/bee_masondo" target="_blank">
+          <a href="#" target="_blank" title="instagram profile">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Buhle Masondo, and it is
+          <a
+            href="https://github.com/Buhle-Masondo/portfolio-project"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
