--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Buhle is a front-end engineer based in South Africa."
+    />
+    <title>My work - Buhle Masondo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +16,10 @@
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/portfolio.css" />
 
     <script
@@ -24,7 +32,34 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Shecodes logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Shecodes small logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="./index.html" title="Homepage">Home</a>
+          </li>
+          <li><a href="./about.html" title="About Buhle">About</a></li>
+          <li class="active" title="Buhle's work">
+            <a href="./projects.html">Work</a>
+          </li>
+          <li><a href="./contact.html" title="Contact Buhle">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -33,7 +68,7 @@
             <img
               src="images/scented.PNG"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Scented Project"
             />
             <h3 class="text-center m-0">Scented Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -43,7 +78,7 @@
               <img
                 src="images/weather project.PNG"
                 class="img-fluid mb-3 rounded"
-                alt=""
+                alt="Weather Project"
               />
               <h3 class="text-center m-0">Weather Project</h3>
               <p class="text-center text-muted">
@@ -51,6 +86,51 @@
               </p>
             </div>
           </div>
+          <footer class="container">
+            <div class="work-box justify-content-between mb-5 d-none d-md-flex">
+              <div>
+                <h4>Work Inqury</h4>
+                <p class="text-muted">Let's work together</p>
+              </div>
+              <div>
+                <a href class="btn btn-branding mt-3" title="contact Buhle"
+                  >Contact me</a
+                >
+              </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+              <a
+                class="email-link"
+                href="mailto:buhlemm22@gmail.com"
+                title="Email Buhle"
+                >buhlemm22@gmail.com</a
+              >
+            </div>
+            <div class="social-links d-flex justify-content-center">
+              <a
+                href="https://www.github.com/Buhle-Masondo"
+                target="_blank"
+                title="Github profile"
+              >
+                <i class="fab fa-github" aria-hidden="true"></i>
+              </a>
+              <a
+                href="https://www.instragram.com/bee_masondo"
+                target="_blank"
+                title="instagram profile"
+              >
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+              </a>
+            </div>
+            <p class="text-center mt-5">
+              This project was coded by Buhle Masondo, and it is
+              <a
+                href="https://github.com/Buhle-Masondo/portfolio-project"
+                target="_blank"
+                >open-sourced</a
+              >
+            </p>
+          </footer>
         </div>
       </div>
     </div>
