edited my paragraph in about.html

--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi I am Buhle Masondo</h1>
+            <h1 class="mb-4">Hi I'm Buhle Masondo</h1>
             <h2 class="mb-4">Frontend Developer, based in South Africa</h2>
             <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I'm a front-end developer that likes turning ideas into responsive
+              websites. I have been curious about how websites are
+              created/built, and that is how i started to learn how to code and
+              design. Now i build websites with HTML, CSS, JavaScript.
             </p>
             <a href="./projects.html" class="btn btn-branding"
               >see my projects</a
